--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -1,40 +1,175 @@
 <?php
 $this->headMeta()->appendHttpEquiv('Content-Type', 'text/html;charset=utf-8');
 $this->headTitle()->setSeparator(' - ');
-
- ?>
+?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-<?php echo $this->headMeta(); ?>
-<title><?php echo $this->pageTitle;?></title>
-<link type="text/css" href="<?php echo $this->baseUrl() ?>/js/jui/css/pepper-grinder/jquery-ui-1.8.9.custom.css" rel="stylesheet" />
-<link type="text/css" href="<?php echo $this->baseUrl() ?>/css/style.css" rel="stylesheet" />
-<link type="text/css" href="<?php echo $this->baseUrl() ?>/css/portal.css" rel="stylesheet" />
-<!-- Bootstrap core CSS -->
-	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	
-	<!-- Bootstrap theme -->
-	<link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-
-
-<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jui/js/jquery-1.4.4.min.js"></script>
-<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
-<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/validation-new.js"></script>
-<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/common.js"></script>
-<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jquery.cookie.js"></script>
+        <?php echo $this->headMeta(); ?>
+        <title><?php echo $this->pageTitle; ?></title>
+        <link type="text/css" href="<?php echo $this->baseUrl() ?>/js/jui/css/pepper-grinder/jquery-ui-1.8.9.custom.css" rel="stylesheet" />
+        <link type="text/css" href="<?php echo $this->baseUrl() ?>/css/style.css" rel="stylesheet" />
+        <link type="text/css" href="<?php echo $this->baseUrl() ?>/css/portal.css" rel="stylesheet" />
+        <!-- Bootstrap core CSS -->
+        <link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Bootstrap theme -->
+        <link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 
 
-<body>
-    
-<div class="header">
-		<div class="logo" style="float:left;"><img src="/img/logotipo.png"></div>
-                
-	</div>
-    
+            <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jui/js/jquery-1.4.4.min.js"></script>
+            <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
+            <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/validation-new.js"></script>
+            <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/common.js"></script>
+            <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jquery.cookie.js"></script>
 
-<?php echo $this->layout()->content; ?>
-</body>
+            <script type="text/javascript">
+                $(function () {
+                    $("#tabs").tabs({cookie: {expires: 1}});
+
+                    /*$( "#datepicker" ).datepicker({ dateFormat:'dd/mm/yy',changeMonth: true, changeYear: true,showOn: "button",   buttonImage: "images/calendar.gif", });*/
+                    $("#datepicker").datepicker({dateFormat: 'dd/mm/yy', changeMonth: true, changeYear: true, showOn: "focus", buttonImage: "images/calendar.gif", });
+                    $(".datepicker2").datepicker({dateFormat: 'dd/mm/yy', changeMonth: true, changeYear: true, showOn: "focus", buttonImage: "images/calendar.gif", });
+
+                    var dates = $("#from, #to").datepicker({
+                        defaultDate: "+0d",
+                        dateFormat: 'dd/mm/yy',
+                        changeMonth: true,
+                        numberOfMonths: 1,
+                        onSelect: function (selectedDate) {
+                            //   alert(selectedDate)
+                            var option = this.id == "from" ? "minDate" : "maxDate",
+                                    instance = $(this).data("datepicker"),
+                                    date = $.datepicker.parseDate(
+                                            instance.settings.dateFormat ||
+                                            $.datepicker._defaults.dateFormat,
+                                            selectedDate, instance.settings);
+                            dates.not(this).datepicker("option", option, date);
+                        }
+                    });
+
+                });
+            </script>
+            <script>
+                (function ($) {
+                    $.widget("ui.combobox", {
+                        _create: function () {
+                            var self = this,
+                                    select = this.element.hide(),
+                                    selected = select.children(":selected"),
+                                    value = selected.val() ? selected.text() : "";
+                            var input = this.input = $("<input>")
+                                    .insertAfter(select)
+                                    .val(value)
+                                    .autocomplete({
+                                        delay: 0,
+                                        minLength: 0,
+                                        source: function (request, response) {
+                                            var matcher = new RegExp($.ui.autocomplete.escapeRegex(request.term), "i");
+                                            response(select.children("option").map(function () {
+                                                var text = $(this).text();
+                                                if (this.value && (!request.term || matcher.test(text)))
+                                                    return {
+                                                        label: text.replace(
+                                                                new RegExp(
+                                                                        "(?![^&;]+;)(?!<[^<>]*)(" +
+                                                                        $.ui.autocomplete.escapeRegex(request.term) +
+                                                                        ")(?![^<>]*>)(?![^&;]+;)", "gi"
+                                                                        ), "<strong>$1</strong>"),
+                                                        value: text,
+                                                        option: this
+                                                    };
+                                            }));
+                                        },
+                                        select: function (event, ui) {
+                                            ui.item.option.selected = true;
+                                            self._trigger("selected", event, {
+                                                item: ui.item.option
+                                            });
+                                        },
+                                        change: function (event, ui) {
+                                            if (!ui.item) {
+                                                var matcher = new RegExp("^" + $.ui.autocomplete.escapeRegex($(this).val()) + "$", "i"),
+                                                        valid = false;
+                                                select.children("option").each(function () {
+                                                    if ($(this).text().match(matcher)) {
+                                                        this.selected = valid = true;
+                                                        return false;
+                                                    }
+                                                });
+                                                if (!valid) {
+                                                    // remove invalid value, as it didn't match anything
+                                                    $(this).val("");
+                                                    select.val("");
+                                                    input.data("autocomplete").term = "";
+                                                    return false;
+                                                }
+                                            }
+                                        }
+                                    })
+                                    .addClass("ui-widget ui-widget-content ui-corner-left");
+
+                            input.data("autocomplete")._renderItem = function (ul, item) {
+                                return $("<li></li>")
+                                        .data("item.autocomplete", item)
+                                        .append("<a>" + item.label + "</a>")
+                                        .appendTo(ul);
+                            };
+
+                            this.button = $("<button type='button'>&nbsp;</button>")
+                                    .attr("tabIndex", -1)
+                                    .attr("title", "Show All Items")
+                                    .insertAfter(input)
+                                    .button({
+                                        icons: {
+                                            primary: "ui-icon-triangle-1-s"
+                                        },
+                                        text: false
+                                    })
+                                    .removeClass("ui-corner-all")
+                                    .addClass("ui-corner-right ui-button-icon")
+                                    .click(function () {
+                                        // close if already visible
+                                        if (input.autocomplete("widget").is(":visible")) {
+                                            input.autocomplete("close");
+                                            return;
+                                        }
+
+                                        // pass empty string as value to search for, displaying all results
+                                        input.autocomplete("search", "");
+                                        input.focus();
+                                    });
+                        },
+                        destroy: function () {
+                            this.input.remove();
+                            this.button.remove();
+                            this.element.show();
+                            $.Widget.prototype.destroy.call(this);
+                        }
+                    });
+                })(jQuery);
+
+                $(function () {
+                    $("#combobox").combobox();
+                    $("#toggle").click(function () {
+                        $("#combobox").toggle();
+                    });
+                });
+            </script>
+
+
+    </head>
+    <body>
+
+        <div class="header">
+            <div class="logo" style="float:left;"><img src="/img/logotipo.png"></div>
+            <big><a style="float: right; margin: 100px 20px 0 0;
+                       " href="/estabelecimento/auth/logout">Sair</a></big>
+                       
+        </div>
+
+        <h6><font color="red"><?php echo $this->headline; ?></font></h6>
+        <?php echo $this->layout()->content; ?>
+    </body>
 </html>
