--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/index.phtml
@@ -1,99 +1,117 @@
 <div id="tudo">
 
-	<div id="topo">
+    <div id="topo">
 
-		<div class="container-topo">
-			<div id="titulos">
-				
-				<h1>Bem-vindo(a), <i> <?php echo $this->responsavel;  ?> </i> - <small><a href="/estabelecimento/auth/logout">(sair)</a></small></h1>
+        <div class="container-topo">
+            <div id="titulos">
 
-			</div>
-		</div>
+                <h1>Bem-vindo(a), <i> <?php echo $this->responsavel; ?> </i> </h1>
 
-	<!--	<div class="container-topo last">
-			<ul id="carrossel" class="jcarousel-skin-tango">
-				 <li>
-				 	<img src="<?php //echo $this->baseUrl("/img/Tool.png")?>"><h4>Configurações</h4>
-				 </li>
-				<li id="menu_pedido">
-					<img src="<?php //echo $this->baseUrl("/img/Block.png")?>" ><h4>Pedidos</h4>
-				</li>
-				<li id="menu_usuario">
-					<img src="<?php //echo $this->baseUrl("/img/community-users-icon.png")?>"><h4>Usuários</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/checkout.png")?>"><h4>Saldos</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/Pencil and ruler-64.png")?>"></img><h4>Editar</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/megaphone.png")?>"></img><h4>Publicidade</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/Talk-64.png")?>"></img><h4>Suporte</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/04_maps_64.png")?>"><h4>Regiões/entregas</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/credit-cards.png")?>"><h4>Pagamentos</h4>
-				</li>
-				<li>
-					<img src="<?php //echo $this->baseUrl("/img/delivery.png")?>"><h4>Entregas</h4>
-				</li>
-			</ul>
-		</div>    -->
+            </div>
+        </div>
 
 
-        	<div class="container-topo last">
-              <!--   <ul id="carrossel" class="jcarousel-skin-tango" >  -->
+        <div class="conta">
 
-                    <ul>
-                		<?php //echo $this->layout()->content;
+            <div class="heading">
 
-     // $this->addHelperPath('AOneFiveThree/View/Helper/Navigation', 'AOneFiveThree_View_Helper_Navigation');
-     // $filteringMenu = $this->navigation()->filteringMenu();
-     // $partial = array('menu.php', 'estabelecimento');
-     // $filteringMenu->setPartial($partial);
-     // echo $filteringMenu;
+                    <h2> Passo 1 - <a href="estabelecimento/empresa" > Cadastrar sua empresa. </a></h2>
+
+                    <h2> Passo 2 - <a href="estabelecimento/produto" > Cadastrar seus produtos. </a></h2>
 
 
-      $partial = array('menu.php', 'estabelecimento');
-      $this->navigation()->menu()->setPartial($partial);
-      echo $this->navigation()->menu()->render();
+            </div>
+        </div>
 
-        ?>
-
-                		</ul>
-		</div>
+        <!--	<div class="container-topo last">
+                        <ul id="carrossel" class="jcarousel-skin-tango">
+                                 <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/Tool.png")  ?>"><h4>Configurações</h4>
+                                 </li>
+                                <li id="menu_pedido">
+                                        <img src="<?php //echo $this->baseUrl("/img/Block.png")  ?>" ><h4>Pedidos</h4>
+                                </li>
+                                <li id="menu_usuario">
+                                        <img src="<?php //echo $this->baseUrl("/img/community-users-icon.png")  ?>"><h4>Usuários</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/checkout.png")  ?>"><h4>Saldos</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/Pencil and ruler-64.png")  ?>"></img><h4>Editar</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/megaphone.png")  ?>"></img><h4>Publicidade</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/Talk-64.png")  ?>"></img><h4>Suporte</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/04_maps_64.png")  ?>"><h4>Regiões/entregas</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/credit-cards.png")  ?>"><h4>Pagamentos</h4>
+                                </li>
+                                <li>
+                                        <img src="<?php //echo $this->baseUrl("/img/delivery.png")  ?>"><h4>Entregas</h4>
+                                </li>
+                        </ul>
+                </div>    -->
 
 
 
 
-		<div id="submenu">
-						<ul id="submenu_pedido">
-							<li><a href="cpainel/monitoramento.phtml">Monitorar pedidos</a></li>
-							<li><a href="">Historico de pedidos</a></li>
-						</ul>
-						<ul id="submenu_usuario">
-							<li><a href="">Cadastrar usuário</a></li>
-							<li><a href="">Gerenciar usuários</a></li>
-						</ul>
-		</div>
-
-	</div>
 
 
 
-	<div id="footer">
-		<ul>
-			
-			<li><a>Atendimento online</a></li>
-			<li><a>Tutoriais</a></li>
-			
-		</ul>
-	</div>
 
-</div>
-</html>	
+
+        <!-- <div class="container-topo last">
+         <ul id="carrossel" class="jcarousel-skin-tango" >  
+
+            <ul>
+<?php
+//echo $this->layout()->content;
+// $this->addHelperPath('AOneFiveThree/View/Helper/Navigation', 'AOneFiveThree_View_Helper_Navigation');
+// $filteringMenu = $this->navigation()->filteringMenu();
+// $partial = array('menu.php', 'estabelecimento');
+// $filteringMenu->setPartial($partial);
+// echo $filteringMenu;
+// 
+// 
+//$partial = array('menu.php', 'estabelecimento');
+//$this->navigation()->menu()->setPartial($partial);
+//echo $this->navigation()->menu()->render();
+?>
+
+                        </ul>
+        </div> -->
+
+
+
+        <!--
+                        <div id="submenu">
+                                                        <ul id="submenu_pedido">
+                                                                <li><a href="cpainel/monitoramento.phtml">Monitorar pedidos</a></li>
+                                                                <li><a href="">Historico de pedidos</a></li>
+                                                        </ul>
+                                                        <ul id="submenu_usuario">
+                                                                <li><a href="">Cadastrar usuário</a></li>
+                                                                <li><a href="">Gerenciar usuários</a></li>
+                                                        </ul>
+                        </div> 
+        
+                </div> 
+        
+        
+        
+                 <div id="footer">
+                        <ul>
+                                
+                                <li><a>Atendimento online</a></li>
+                                <li><a>Tutoriais</a></li>
+                                
+                        </ul>
+                </div>  -->
+
+    </div> 
