--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/grid-view.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/grid-view.phtml
@@ -1,5 +1,5 @@
-<div style="padding-left: 644px;"><input type="button" name="Save" value="New" onclick="location.href='<?php  echo $this->baseUrl() ?>/estabelecimento/produto/'"></div>
-<div class="dataDiv ui-corner-all" style="width: 700px;">
+<div style="width: 750px; margin-left: auto; margin-right: auto;float: right;"><input type="button" name="Save" value="Novo" onclick="location.href='<?php  echo $this->baseUrl() ?>/estabelecimento/produto/'"></div>
+<div class="dataDiv ui-corner-all" style="width: 750px; margin-left: auto; margin-right: auto;clear: both;">
   <table border="0" class="gridViewTable" width="100%">
     <tr class="head">
       <td>Nome</td>
