--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -1,5 +1,5 @@
-<h2><?php echo $this->headline; ?></h2>
-<div id="tabs" style="width: 714px;">
+
+<div id="tabs" style="width: 714px; margin-left: auto; margin-right: auto;">
     <div id="scroller">
         <ul>
             <li><a href="#tab1">Produto</a></li>
@@ -61,10 +61,10 @@
                     
                     <tr>                        
                         <td>Descricao do tamanho &nbsp;&nbsp;&nbsp;<br>
-                            <input type="text" class="input-medium RQR required"  title='Por favor, indique a descrição' maxlength="20"  name="descricao" id="descricao_tamanho" value="<?php echo $this->formData5['descricao'] ?>" style="width: 200px;">
+                            <input type="text" class="input-medium RQR required"  title='Por favor, indique a descrição' maxlength="20"  name="descricao_tamanho" id="descricao_tamanho" value="" style="width: 200px;">
                              <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                         <td colspan="2"> Preco <br>
-                            <input type="text" class="input-medium RQR required validDecimalNumber"  title='Por favor, indique o preço'  name="preco" id="preco" value="<?php echo $this->formData5['preco'] ?>" style="width: 200px;" maxlength="11">
+                            <input type="text" class="input-medium RQR required validDecimalNumber"  title='Por favor, indique o preço'  name="preco" id="preco" value="" style="width: 200px;" maxlength="11">
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                     </tr>
 <?php } ?>               
@@ -84,10 +84,14 @@
                     </tr>
                 </table>
             </form>
+            <br>
+            <br>
+            
+            <?php  if($this->produtoId != '') { ?>                                        
             
                         <form action="<?php echo $this->baseUrl() ?>/estabelecimento/produto/add" method="post" class="frm" id='form5' name="form5" onsubmit="return validateForm('form5');" >
                         <fieldset style=" margin: 0; padding: 0;">
-                            <legend>Tamanho</legend>
+                            <legend> Edite aqui o tamanhos do seu produto </legend>
                             <table class="tableFrm" cellspacing="8" cellpadding="0" border="0">
 <?php if (count($this->tamanhoDropDown) > 1)
                                 { ?>
@@ -115,7 +119,7 @@
                           <!--      <tr> -->
                                     
                                     <td>Descricao &nbsp;&nbsp;&nbsp;<br>
-                                        <input type="text" class="input-medium RQR required"  title='Por favor, indique a descrição' maxlength="20"  name="descricao" id="descricao" value="<?php echo $this->formData5['descricao'] ?>" style="width: 200px;">
+                                        <input type="text" class="input-medium RQR required"  title='Por favor, indique a descrição' maxlength="20"  name="descricao_tamanho" id="descricao_tamanho" value="<?php echo $this->formData5['descricao'] ?>" style="width: 200px;">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                     <td colspan="2"> Preco <br>
                                         <input type="text" class="input-medium RQR required validDecimalNumber"  title='Por favor, indique o preço'  name="preco" id="preco" value="<?php echo $this->formData5['preco'] ?>" style="width: 200px;" maxlength="11">
@@ -149,7 +153,7 @@
                                 { ?>
                                     <input type="button" name="Save" value="Remover" onclick="delTamanhos('<?php echo $this->produtoId; ?>','<?php echo $this->tamanhoId; ?>')">
 <?php } ?>
-                                    <input type="button" name="Save" value="Grid View" style="margin-left:  200px;" onclick="location.href='<?php echo $this->url(array('controller' => 'produto', 'action' => 'gridView')); ?>'"></td>
+                                    <input type="button" name="Save" value="Ver Grid" style="margin-left:  200px;" onclick="location.href='<?php echo $this->url(array('controller' => 'produto', 'action' => 'gridView')); ?>'"></td>
                             </tr>
                         </table>
                             
@@ -157,6 +161,8 @@
 
               </form>
 
+            <?php  } ?>
+            
         </div>
 
     </div>
