--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/index.phtml
@@ -15,9 +15,9 @@
 
             <div class="heading">
 
-                    <h2> Passo 1 - <a href="estabelecimento/empresa" > Cadastrar sua empresa. </a></h2>
+                    <h2> Passo 1 - <a href="/estabelecimento/empresa" > Cadastrar sua empresa. </a></h2>
 
-                    <h2> Passo 2 - <a href="estabelecimento/produto" > Cadastrar seus produtos. </a></h2>
+                    <h2> Passo 2 - <a href="/estabelecimento/produto" > Cadastrar seus produtos. </a></h2>
 
 
             </div>
