--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -163,7 +163,7 @@ $this->headTitle()->setSeparator(' - ');
     <body>
 
         <div class="header">
-            <div class="logo" style="float:left;"><img src="/img/logotipo.png"></div>
+            <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png" ></a></div>
             <big><a style="float: right; margin: 100px 20px 0 0;
                        " href="/estabelecimento/auth/logout">Sair</a></big>
                        
