--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -8,7 +8,8 @@
 	<link type="text/css" href="/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
 	
 	<!-- Portal CSS-->
-	<link type="text/css" href="/css/portal.css" rel="stylesheet" />
+	<link type="text/css" href="/css/portal.css" rel="stylesheet" />     
+
 	
 	<!-- jQuery -->
     <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
@@ -19,9 +20,9 @@
 
 </head>
 
-	<div class="topo">
-		<div class="logo" style="float:left;"><img src="/img/logotipo.png"></div>
-                <div style="float: right;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
+        <div class="header">
+            <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png"></a></div>
+                <div style="float: right; margin-right: 50px; margin-top: 100px; font-size: medium;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
 	</div>
     <?php
 
@@ -36,8 +37,8 @@
     <div class="formBuscar">
         <form action="/portal/index/consulta" method="post" class="" id='form1'>
 
-            <h1>Entre com os critérios de pesquisa por favor. Você pode procurar por ingredientes específicos, lugares, pratos ou 
-            qualquer outro critério disponível para trazer a opção mais certa para você!</h1> 
+            <h2>Por favor, entre com os critérios de pesquisa. Você pode procurar por ingredientes específicos, lugares, pratos ou 
+            qualquer outro critério disponível para trazer a opção mais certa para você!</h2> 
 
             <div style="text-align: left; border: transparent; width: 380px; ">
                  <p class="lead">Aqui você pode digitar qualquer termo para sua consulta:</p>
