--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -17,12 +17,12 @@
                 <table class="tableFrm" cellspacing="0" cellpadding="0" border="0">
                     <tr>
 
-                        <td width="50%"> Nome* <br><input type="text" class="input-medium RQR required"  name="nome" maxlength="50" value="<?php echo $this->formData['nome'] ?>" style="width: 200px;" title="Por favor, indique nome">
+                        <td width="50%"> Nome * <br><input type="text" class="input-medium RQR required"  name="nome" maxlength="50" value="<?php echo $this->formData['nome'] ?>" style="width: 200px;" title="Por favor, indique nome">
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                        <!--  <td width="50%">&nbsp;&nbsp; Valor calórico calculado: <?php //echo $this->totalCalorias; ?></td> -->
                     </tr>
                     <tr>
-                        <td> Valor calorico estimado <br><input type="text" class="input-medium RQR required validDecimalNumber"   name="valor_calorico" value="<?php echo $this->formData['valor_calorico'] ?>" maxlength="50" style="width: 200px;" title="Por favor, indique valor calorico">
+                        <td> Valor calórico aproximado *<br><input type="text" class="input-medium RQR required validDecimalNumber"   name="valor_calorico_aproximado" value="<?php echo $this->formData['valor_calorico_aproximado'] ?>" maxlength="50" style="width: 200px;" title="Por favor, indique valor calorico">
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
 
                         <td> Tipo * <br>
