--- a/whattoeat/application/modules/portal/views/scripts/cliente/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/cliente/index.phtml
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
     <script type="text/javascript" src="/js/portal.js"></script>
     <script type="text/javascript" src="/js/validation-new.js"></script>
-
+    <script type="text/javascript" src="/js/mootools/mootools-core-1.4.2-full-compat.js"></script>
 </head>
 
 <body>
