--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -13,11 +13,16 @@
 	<!-- jQuery -->
     <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
     <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
+    <script type="text/javascript" src="/js/mootools/mootools-core-1.4.2-full-compat.js"></script>
     
     <!-- javascript Portal -->
     <script type="text/javascript" src="/js/portal.js"></script>
 
 </head>
+ <div class="header">
+            <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png"></a></div>
+                <div style="float: right; margin-right: 50px; margin-top: 100px; font-size: medium;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
+	</div>
 
     <?php
 
