--- a/whattoeat/application/modules/estabelecimento/views/layouts/tela_cadastro_layout.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/tela_cadastro_layout.phtml
@@ -23,6 +23,7 @@ var base_url='<?php echo $this->baseUrl() ?>';
 <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/validation-new.js"></script>
 <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/common.js"></script>
 <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/mootools/mootools-core-1.4.2-full-compat.js"></script>
 
 
 <script type="text/javascript">
