--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -14,7 +14,7 @@
 	<!-- jQuery -->
     <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
     <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
-    
+    <script type="text/javascript" src="/js/mootools/mootools-core-1.4.2-full-compat.js"></script>
     <!-- javascript Portal -->
     <script type="text/javascript" src="/js/portal.js"></script>
 
