--- a/whattoeat/application/modules/portal/views/scripts/pedido/concluir-compra.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/pedido/concluir-compra.phtml
@@ -7,9 +7,15 @@
     <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
     <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
      <script type="text/javascript" src="/js/common.js"></script>
+      
 
 
   </head>
+   <div class="header">
+            <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png"></a></div>
+                <div style="float: right; margin-right: 50px; margin-top: 100px; font-size: medium;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
+	</div>
+  
   <body>
     <h4><?php echo $this->headline?></h4>
 
