--- a/whattoeat/application/modules/portal/views/scripts/pedido/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/pedido/index.phtml
@@ -1,7 +1,17 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <link type="text/css" href="/css/portal.css" rel="stylesheet" />
+    
+    <!-- Bootstrap core CSS -->
+	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	
+	<!-- Bootstrap theme -->
+	<link type="text/css" href="/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
+	
+	<!-- Portal CSS-->
+	<link type="text/css" href="/css/portal.css" rel="stylesheet" />     
+
+	
     <link type="text/css" href="/js/jui/css/pepper-grinder/jquery-ui-1.8.9.custom.css" rel="stylesheet" />
 
 
@@ -9,10 +19,14 @@
     <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
     <script type="text/javascript" src="/js/portal.js"></script>
     <script type="text/javascript" src="/js/validation-new.js"></script>
+    
 
 
 </head>
-
+ <div class="header">
+            <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png"></a></div>
+                <div style="float: right; margin-right: 50px; margin-top: 100px; font-size: medium;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
+	</div>
 <body>
 
     <form action="/portal/pedido/concluir-Compra" method="POST" name="form1" id="form1" onsubmit="return validateForm('form1')" >
