--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -22,7 +22,7 @@
                        <!--  <td width="50%">&nbsp;&nbsp; Valor calórico calculado: <?php //echo $this->totalCalorias; ?></td> -->
                     </tr>
                     <tr>
-                        <td> Valor calórico aproximado *<br><input type="text" class="input-medium RQR required validDecimalNumber"   name="valor_calorico_aproximado" value="<?php echo $this->formData['valor_calorico_aproximado'] ?>" maxlength="50" style="width: 200px;" title="Por favor, indique valor calorico">
+                        <td> Valor calórico (calculado pelo sistema) <br><input type="text" class="input-medium validDecimalNumber"   name="valor_calorico" value="<?php echo $this->formData['valor_calorico'] ?>" disabled="true" maxlength="50" style="width: 200px;" title="Por favor, indique valor calorico">
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
 
                         <td> Tipo * <br>
