--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -23,7 +23,7 @@ $this->headTitle()->setSeparator(' - ');
             <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/validation-new.js"></script>
             <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/common.js"></script>
             <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/jquery.cookie.js"></script>
-            
+            <script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/portal.js"></script>
 
             <script type="text/javascript">
                 $(function () {
