--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -165,9 +165,15 @@ $this->headTitle()->setSeparator(' - ');
 
         <div class="header">
             <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png" ></a></div>
-            <big><a style="float: right; margin: 100px 20px 0 0;
-                       " href="/estabelecimento/auth/logout">Sair</a></big>
+            
+            <font size="7" color="red" style="float: left; font-family: cursive; margin: 50px 0px 0px 50px;"> A maneira inovadora de divulgar seus produtos  </font>
                        
+            <big><a style="float: right; margin: 100px 20px 0 0;" href="/estabelecimento/auth/logout">Sair</a></big>
+                       
+            <big><a style="float: right; margin: 100px 20px 0 0;" href="/estabelecimento/index/faleconosco">Dúvidas? Fale conosco!</a></big>
+            
+            <big><a style="float: right; margin: 100px 20px 0 0;" href="/estabelecimento/index/quemsomos">Quem somos</a></big>
+                                   
         </div>
 
         <h6><font color="red"><?php echo $this->headline; ?></font></h6>
